--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/siddhesh321995/simplejs.git"
   },
   "keywords": [
-    "SimpleJS",
+    "SimpleItJS",
     "Framework",
     "Frontend",
     "Light"
