--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "simpleitjs",
   "version": "1.1.2",
   "description": "Simple light frontend framework",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "npm start"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
