--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simpleitjs",
-  "version": "1.1.2",
+  "version": "1.2.3",
   "description": "Simple light frontend framework",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,7 +15,8 @@
     "SimpleItJS",
     "Framework",
     "Frontend",
-    "Light"
+    "Light",
+    "Typescript"
   ],
   "author": "Siddhesh Kulkarni",
   "license": "MIT",
